--- a/microservices-shop/inventory-service/src/main/resources/application.properties
+++ b/microservices-shop/inventory-service/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8082
